# lesson-plan-parse-mbsse

./: .gitignore  LICENSE  README.md  config.yml  environment.yml  pyproject.toml
scripts/: clean_mbsseKP_lessonplans.py  mbsse_extras.py  parse_mbsseKP_lessonplans.py  test_mbsseKP_lessonplans.py
src/: constants.py  download_MBSSE.py  formats_MBSSE.py  parsefuns_MBSSE.py
